@@ -1,3 +1,8 @@
+2003-03-28  Paul D. Smith  <psmith@gnu.org>
+
+	* scripts/targets/SECONDARY: Test the "global" .SECONDARY (with
+	not prerequisites)--Bug #2515.
+
 2003-01-30  Paul D. Smith  <psmith@gnu.org>
 
 	* scripts/features/targetvars: Test very long target-specific
